Update Index.html with better names for options

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="colorrando-mode" type="checkbox">
-                <label for="colorrando-mode">Color Rando mode
+                <label for="colorrando-mode">Color Randomizer
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -305,7 +305,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="tournament-mode" type="checkbox">
-                <label for="tournament-mode">Tournament mode
+                <label for="tournament-mode">Tournament Mode
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -321,7 +321,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="magicmax-mode" type="checkbox">
-                <label for="magicmax-mode">Magic Max mode
+                <label for="magicmax-mode">Magic Vessels
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -334,7 +334,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="accessibility-patches" type="checkbox">
-                <label for="accessibility-patches">Apply accessibility patches
+                <label for="accessibility-patches">Accessibility Patches
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -348,7 +348,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="antifreeze-mode" type="checkbox">
-                <label for="antifreeze-mode">Anti-Freeze mode
+                <label for="antifreeze-mode">Anti-Freeze
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -366,7 +366,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="mypurse-mode" type="checkbox">
-                <label for="mypurse-mode">That's my purse! mode
+                <label for="mypurse-mode">That's my purse!
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -383,7 +383,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="iws-mode" type="checkbox">
-                <label for="iws-mode">Infinite Wing Smash mode
+                <label for="iws-mode">Infinite Wing Smash
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -400,7 +400,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="fastwarp-mode" type="checkbox">
-                <label for="fastwarp-mode">Fast Warp mode
+                <label for="fastwarp-mode">Fast Warps
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -417,7 +417,7 @@
             </div>              
               <div class="pure-u-1-2">
                 <input id="noprologue-mode" type="checkbox">
-                <label for="noprologue-mode">No Prologue mode
+                <label for="noprologue-mode">Remove Prologue
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -435,7 +435,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="unlocked-mode" type="checkbox">
-                <label for="unlocked-mode">Unlocked mode
+                <label for="unlocked-mode">Unlocked Mode
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -483,7 +483,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="enemyStatRando-mode" type="checkbox">
-                <label for="enemyStatRando-mode">Enemy Stat Randomizer mode
+                <label for="enemyStatRando-mode">Enemy Stats
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -502,7 +502,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="shopPriceRando-mode" type="checkbox">
-                <label for="shopPriceRando-mode">Shop Price Randomizer Mode
+                <label for="shopPriceRando-mode">Shop Prices
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -521,7 +521,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="startRoomRando-mode" type="checkbox">
-                <label for="startRoomRando-mode">Starting Room Randomizer Mode
+                <label for="startRoomRando-mode">Starting Zone
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
