More options updates on Index.html

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
               </div>
               <div class="pure-u-12-24">
                 <input id="turkey-mode" type="checkbox">
-                <label for="turkey-mode">Turkey mode
+                <label for="turkey-mode">Turkey Mode
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -464,7 +464,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="surprise-mode" type="checkbox">
-                <label for="surprise-mode">Surprise mode
+                <label for="surprise-mode">Relic Surprise!
                   <span class="tooltip-wrapper">
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
@@ -479,7 +479,7 @@
               </div>
               <div class="pure-u-12-24">
                 <input id="music" type="checkbox">
-                <label for="music">Music</label>
+                <label for="music">Music Randomizer</label>
               </div>
               <div class="pure-u-1-2">
                 <input id="enemyStatRando-mode" type="checkbox">
@@ -536,7 +536,7 @@
               </div>
               <div class="pure-u-12-24">
                 <input id="prologue-rewards" type="checkbox">
-                <label for="prologue-rewards">Prologue rewards</label>
+                <label for="prologue-rewards">Prologue Rewards</label>
               </div>
             </div>
           </fieldset>
