--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="show-spoilers" type="checkbox">
-                <label for="show-spoilers">Show spoilers</label>
+                <label for="show-spoilers">Show Spoilers</label>
               </div>
               <div class="pure-u-1-2">
                 <input id="mypurse-mode" type="checkbox">
@@ -379,7 +379,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="show-relics" type="checkbox">
-                <label for="show-relics">Show relic locations</label>
+                <label for="show-relics">Show Relic Locations</label>
               </div>
               <div class="pure-u-1-2">
                 <input id="iws-mode" type="checkbox">
@@ -396,7 +396,7 @@
               </div>
               <div class="pure-u-1-2">
                 <input id="show-solutions" type="checkbox">
-                <label for="show-solutions">Show solutions</label>
+                <label for="show-solutions">Show Solutions</label>
               </div>
               <div class="pure-u-1-2">
                 <input id="fastwarp-mode" type="checkbox">
@@ -413,7 +413,7 @@
               </div>
               <div class="pure-u-12-24">
                     <input id="enemy-drops" type="checkbox">
-                    <label for="enemy-drops">Enemy drops</label>
+                    <label for="enemy-drops">Enemy Drops</label>
             </div>              
               <div class="pure-u-1-2">
                 <input id="noprologue-mode" type="checkbox">
@@ -517,7 +517,7 @@
               </div>
               <div class="pure-u-12-24">
                 <input id="starting-equipment" type="checkbox" disabled>
-                <label for="starting-equipment">Starting equipment</label>
+                <label for="starting-equipment">Starting Equipment</label>
               </div>
               <div class="pure-u-1-2">
                 <input id="startRoomRando-mode" type="checkbox">
