--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
     <script src="build/presets/adventure.js"></script>
     <script src="build/presets/og.js"></script>
     <script src="build/presets/guarded-og.js"></script>
-    <script src="build/presets/speedrun.js"></script>
+    <script src="build/presets/sequence-breaker.js"></script>
     <script src="build/presets/lycanthrope.js"></script>
     <script src="build/presets/warlock.js"></script>
     <script src="build/presets/nimble.js"></script>
