Renamed three relic extensions and added new features to Lucky Sevens

--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
                         </label>
                       </div>
                       <div>
-                        <input id="extension-spread"
+                        <input id="extension-guardedplus"
                                name="extension"
                                type="radio"
-                               value="spread">
-                        <label for="extension-spread">
-                          Spread<span style="color: red;">*</span>
+                               value="guardedplus">
+                        <label for="extension-guardedplus">
+                          Guarded<i>Plus</i>
                           <span class="tooltip-wrapper">
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
                                 Add to guarded locations with more checks on
-                                left side of second castle. 39 Check locations. <span style="color: red;">*May create incompletable seeds if generated from website.</span>
+                                left side of second castle. 39 Check locations.
                               </span>
                             </span>
                           </span>
@@ -153,44 +153,44 @@
                                type="radio"
                                value="equipment">
                         <label for="extension-equipment">
-                          Equipment<span style="color: red;">*</span>
+                          Equipment
                           <span class="tooltip-wrapper">
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
                                 Relics and progression items may appear in
-                                place of equipment tiles. 105 Check locations. <span style="color: red;">*May create incompletable seeds if generated from website.</span>
+                                place of equipment tiles. 105 Check locations.
                               </span>
                             </span>
                           </span>
                         </label>
                       </div>
                       <div>
-                        <input id="extension-tourist"
+                        <input id="extension-scenic"
                                 name="extension"
                                 type="radio"
-                                value="tourist">
-                        <label for="extension-tourist">
-                          Tourist<span style="color: red;">*</span>
+                                value="scenic">
+                        <label for="extension-scenic">
+                          Scenic
                           <span class="tooltip-wrapper">
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
                                 Relics and progression items may appear in
                                 place of equipment tiles or in unique 
-                                locations in either castle. 118 Check locations. <span style="color: red;">*May create incompletable seeds if generated from website.</span>
+                                locations in either castle. 118 Check locations.
                               </span>
                             </span>
                           </span>
                         </label>
                       </div>
                       <div>
-                        <input id="extension-wanderer"
+                        <input id="extension-extended"
                                 name="extension"
                                 type="radio"
-                                value="wanderer">
-                        <label for="extension-wanderer">
-                          Wanderer<span style="color: red;">*</span>
+                                value="extended">
+                        <label for="extension-extended">
+                          Extended
                           <span class="tooltip-wrapper">
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
@@ -198,9 +198,7 @@
                                 Relics and progression items may appear in
                                 place of <i>limited</i> equipment tiles or 
                                 in unique locations in either castle. 70 
-                                Check locations. <span style="color: red;">*May create 
-                                incompletable seeds if generated from 
-                                website.</span>
+                                Check locations. 
                               </span>
                             </span>
                           </span>
@@ -588,8 +586,15 @@
         <li>Removed boss room limitations for Cursed Night preset.</li>
         <li>Added ability to use Heart Refresh for Cursed Night preset.</li>
         <li>Added new starting equipment for Cursed Night preset.</li>
+        <li>Added 7 random relics to starting pool for Lucky Sevens preset.</li>
+        <li>Removed prologue for Lucky Sevens preset.</li>
+        <li>Renamed Speedrun preset to Sequence Breaker.</li>
         <li>Updated preset descriptions.</li>
+        <li>Renamed Wanderer locations extension to Extended.</li>
+        <li>Renamed Spread locations extension to Guarded<i>Plus</i>.</li>
+        <li>Renamed Tourist locations extension to Scenic.</li>
         <li>Set ground work for website re-design.</li>
+        <li>Started website re-design.</li>
         <li>Corrected an error when trying to apply Shop Price Rando.</li>
         <li>Reticulated Glitch logic splines.</li>
       </ul>
