--- a/index.html
+++ b/index.html
@@ -588,11 +588,14 @@
         <li>Added new starting equipment for Cursed Night preset.</li>
         <li>Added 7 random relics to starting pool for Lucky Sevens preset.</li>
         <li>Removed prologue for Lucky Sevens preset.</li>
+        <li>Removed remaining Bat relics from Leg Day preset.</li>
         <li>Renamed Speedrun preset to Sequence Breaker.</li>
+        <li>Renamed Forge preset to Any Percent.</li>
         <li>Updated preset descriptions.</li>
         <li>Renamed Wanderer locations extension to Extended.</li>
         <li>Renamed Spread locations extension to Guarded<i>Plus</i>.</li>
         <li>Renamed Tourist locations extension to Scenic.</li>
+        <li>Updated many option names on the website to be more aesthetic or descriptive.</li>
         <li>Set ground work for website re-design.</li>
         <li>Started website re-design.</li>
         <li>Corrected an error when trying to apply Shop Price Rando.</li>
@@ -1119,7 +1122,7 @@
     <script src="build/presets/breach.js"></script>
     <script src="build/presets/grand-tour.js"></script>
     <script src="build/presets/crash-course.js"></script>
-    <script src="build/presets/forge.js"></script>
+    <script src="build/presets/any-percent.js"></script>
     <script src="build/presets/lookingglass.js"></script>
     <script src="build/presets/skinwalker.js"></script>
     <script src="build/presets/summoner.js"></script>
