Adding More Details to preset selection
added a few Details to the preset selection. currently only displays undefined.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                 <p id="preset-description"></p>
                 <h4>Preset author(s):</h4>
                 <p id="preset-author"></p>
+                <h4>Knowledge Level:</h4>
+                <p id="preset-knowledgeCheck"></p>
+                <h4>Extension:</h4>
+                <p id="preset-extension"></p>
+                <h4>Complexity:</h4>
+                <p id="preset-complexity"></p>
               </section>
 
               <fieldset id="options">
