Updated index.html formatting to sort data from Meta Data

--- a/index.html
+++ b/index.html
@@ -86,28 +86,44 @@
                 <p id="preset-description"></p>
                 <h4>Preset author(s):</h4>
                 <p id="preset-author"></p>
-                <h4>Knowledge Level:</h4>
-                <p id="preset-knowledgeCheck"></p>
-                <h4>Extension:</h4>
-                <p id="preset-metaExtension"></p>
-                <h4>Complexity:</h4>
-                <p id="preset-metaComplexity"></p>
-                <h4>Item Stat Randomized:</h4>
-                <p id="preset-itemStats"></p>
-                <h4>Time Frame:</h4>
-                <p id="preset-timeFrame"></p>
-                <h4>Modded Level:</h4>
-                <p id="preset-moddedLevel"></p>
-                <h4>Castle Type:</h4>
-                <p id="preset-castleType"></p>
-                <h4>Early Transformation:</h4>
-                <p id="preset-transformEarly"></p>
-                <h4>Transform Focus:</h4>
-                <p id="preset-transformFocus"></p>
-                <h4>Win Condition:</h4>
-                <p id="preset-winCondition"></p>
+                <p><br/></p>
+                <fieldset>
+                  <legend>-Meta Data</legend>
+                  <div class="pure-g">
+                    <div class="pure-u-1-5">
+                      <h4>Knowledge Level:</h4>
+                      <p id="preset-knowledgeCheck"></p>
+                      <h4>Modded Level:</h4>
+                      <p id="preset-moddedLevel"></p>
+                    </div>
+                    <div class="pure-u-1-5">
+                      <h4>Relic Extension:</h4>
+                      <p id="preset-metaExtension"></p>
+                      <h4>Castle Type:</h4>
+                      <p id="preset-castleType"></p>
+                    </div>
+                    <div class="pure-u-1-5">
+                      <h4>Complexity:</h4>
+                      <p id="preset-metaComplexity"></p>
+                      <h4>Early Transformation:</h4>
+                      <p id="preset-transformEarly"></p>
+                    </div>
+                    <div class="pure-u-1-5">
+                      <h4>Item Stat Randomized:</h4>
+                      <p id="preset-itemStats"></p>
+                      <h4>Transform Focus:</h4>
+                      <p id="preset-transformFocus"></p>
+                    </div>
+                    <div class="pure-u-1-5">
+                      <h4>Time Frame:</h4>
+                      <p id="preset-timeFrame"></p>
+                      <h4>Win Condition:</h4>
+                      <p id="preset-winCondition"></p>
+                    </div>
+                  </div>
+                </fieldset>
+                <p><br/></p>
               </section>
-
               <fieldset id="options">
                 <div class="pure-g">
                   <div class="pure-u-12-24">
@@ -429,10 +445,10 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-12-24">
+              <div class="pure-u-1-2">
                     <input id="enemy-drops" type="checkbox">
                     <label for="enemy-drops">Enemy Drops</label>
-            </div>              
+              </div>              
               <div class="pure-u-1-2">
                 <input id="noprologue-mode" type="checkbox">
                 <label for="noprologue-mode">Remove Prologue
@@ -447,7 +463,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-12-24">
+              <div class="pure-u-1-2">
                 <input id="stats" type="checkbox">
                 <label for="stats">Item stats</label>
               </div>
@@ -466,7 +482,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-12-24">
+              <div class="pure-u-1-2">
                 <input id="turkey-mode" type="checkbox">
                 <label for="turkey-mode">Turkey Mode
                   <span class="tooltip-wrapper">
@@ -495,7 +511,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-12-24">
+              <div class="pure-u-1-2">
                 <input id="music" type="checkbox">
                 <label for="music">Music Randomizer</label>
               </div>
@@ -514,7 +530,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-12-24">
+              <div class="pure-u-1-2">
                 <input id="item-locations" type="checkbox">
                 <label for="item-locations">Item locations</label>
               </div>
@@ -533,7 +549,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-12-24">
+              <div class="pure-u-1-2">
                 <input id="starting-equipment" type="checkbox" disabled>
                 <label for="starting-equipment">Starting Equipment</label>
               </div>
@@ -552,7 +568,7 @@
                   </span>
                 </label>
               </div>
-              <div class="pure-u-12-24">
+              <div class="pure-u-1-2">
                 <input id="prologue-rewards" type="checkbox">
                 <label for="prologue-rewards">Prologue Rewards</label>
               </div>
