Updated metadata display.

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                   <legend>-Meta Data</legend>
                   <div class="pure-g">
                     <div class="pure-u-1-5">
-                      <h4>Knowledge Level:</h4>
+                      <h4>Knowledge Required:</h4>
                       <p id="preset-knowledgeCheck"></p>
-                      <h4>Modded Level:</h4>
+                      <h4>Modification Level:</h4>
                       <p id="preset-moddedLevel"></p>
                     </div>
                     <div class="pure-u-1-5">
@@ -103,19 +103,19 @@
                       <p id="preset-castleType"></p>
                     </div>
                     <div class="pure-u-1-5">
-                      <h4>Complexity:</h4>
+                      <h4>Minimum Complexity:</h4>
                       <p id="preset-metaComplexity"></p>
                       <h4>Early Transformation:</h4>
                       <p id="preset-transformEarly"></p>
                     </div>
                     <div class="pure-u-1-5">
-                      <h4>Item Stat Randomized:</h4>
+                      <h4>Item Stats Randomized:</h4>
                       <p id="preset-itemStats"></p>
-                      <h4>Transform Focus:</h4>
+                      <h4>Transformation Focus:</h4>
                       <p id="preset-transformFocus"></p>
                     </div>
                     <div class="pure-u-1-5">
-                      <h4>Time Frame:</h4>
+                      <h4>Expected Completion Pace:</h4>
                       <p id="preset-timeFrame"></p>
                       <h4>Win Condition:</h4>
                       <p id="preset-winCondition"></p>
