re-named two-word presets to have similar formatting to others

--- a/index.html
+++ b/index.html
@@ -1175,12 +1175,12 @@
     <script src="build/presets/lookingglass.js"></script>
     <script src="build/presets/skinwalker.js"></script>
     <script src="build/presets/summoner.js"></script>
-    <script src="build/presets/agonizetwtw.js"></script>
-    <script src="build/presets/stwosafe.js"></script>
+    <script src="build/presets/agonize-twtw.js"></script>
+    <script src="build/presets/safe-stwo.js"></script>
     <script src="build/presets/brawler.js"></script>
     <script src="build/presets/open.js"></script>
     <script src="build/presets/first-castle.js"></script>
-    <script src="build/presets/luckysevens.js"></script>
+    <script src="build/presets/lucky-sevens.js"></script>
     <script src="build/presets/sight-seer.js"></script>
     <script src="build/presets/cursed-night.js"></script>
     <script src="build/presets/glitchmaster.js"></script>
