--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
                       <h4>Knowledge Required:</h4>
                       <p id="preset-knowledgeCheck"></p>
                     </div>
-
                     <div class="meta-data">
                       <h4>Modification Level:</h4>
                       <p id="preset-moddedLevel"></p>
@@ -637,8 +636,10 @@
           <li>Added 7 random relics to starting pool for Lucky Sevens preset.</li>
           <li>Removed prologue for Lucky Sevens preset.</li>
           <li>Removed remaining Bat relics from Leg Day preset.</li>
+          <li>Removed Karm Coin from the $400 candle in Rat Race and replaced with Heart.</li>
           <li>Renamed Speedrun preset to Sequence Breaker.</li>
           <li>Renamed Forge preset to Any Percent.</li>
+          <li>Corrected errors which caused Rat-Race and Sequence Breaker presets from appearing on the website.</li>
           <li>Reticulated Glitch logic splines.</li>
           <h4>Extension Changes</h4>
           <li>Renamed Wanderer locations extension to Extended.</li>
