Update index.html to account for new preset names

--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
     <script src="build/presets/adventure.js"></script>
     <script src="build/presets/og.js"></script>
     <script src="build/presets/guarded-og.js"></script>
-    <script src="build/presets/speedrun.js"></script>
+    <script src="build/presets/sequence-breaker.js"></script>
     <script src="build/presets/lycanthrope.js"></script>
     <script src="build/presets/warlock.js"></script>
     <script src="build/presets/nimble.js"></script>
@@ -1176,7 +1176,7 @@
     <script src="build/presets/breach.js"></script>
     <script src="build/presets/grand-tour.js"></script>
     <script src="build/presets/crash-course.js"></script>
-    <script src="build/presets/forge.js"></script>
+    <script src="build/presets/any-percent.js"></script>
     <script src="build/presets/lookingglass.js"></script>
     <script src="build/presets/skinwalker.js"></script>
     <script src="build/presets/summoner.js"></script>
