Corrected Dracula Special Case

--- a/index.html
+++ b/index.html
@@ -648,6 +648,8 @@
           <h4>Options Changes</h4>
           <li>Added new Starting Zone randomizer allowing Alucard to start in different zones.</li>
           <li>Corrected an error when trying to apply Shop Price Rando.</li>
+          <li>Corrected an error when assigning randomization display for Death.</li>
+          <li>Corrected an error when assigning randomization of attributes to Dracula.</li>
           <h4>Website Changes</h4>
           <li>Set ground work for website re-design.</li>
           <li>Started website re-design.</li>
