Fix Aperture Locks Allowed and No Prologue Mode

--- a/index.html
+++ b/index.html
@@ -650,6 +650,7 @@
           <li>Corrected an error when trying to apply Shop Price Rando.</li>
           <li>Corrected an error when assigning randomization display for Death.</li>
           <li>Corrected an error when assigning randomization of attributes to Dracula.</li>
+          <li>Corrected an error when improperly clearing time attack in No Prologue Mode.</li>
           <h4>Website Changes</h4>
           <li>Set ground work for website re-design.</li>
           <li>Started website re-design.</li>
