preset re-builds and Dog Life updated

--- a/index.html
+++ b/index.html
@@ -639,7 +639,11 @@
           <li>Removed Karm Coin from the $400 candle in Rat Race and replaced with Heart.</li>
           <li>Renamed Speedrun preset to Sequence Breaker.</li>
           <li>Renamed Forge preset to Any Percent.</li>
-          <li>Corrected errors which caused Rat-Race and Sequence Breaker presets from appearing on the website.</li>
+          <li>Corrected errors which prevented Rat-Race and Sequence Breaker presets from appearing on the website.</li>
+          <li>Flight of wolf re-worked in Dog Life preset.</li>
+          <li>Removed squeak from big-toss in Dog Life.</li>
+          <li>removed multiple soft-locks in logic for Dog Life.</li>
+          <li>Tile / terrain updates for Dog Life for ease of movement.</li>
           <li>Reticulated Glitch logic splines.</li>
           <h4>Extension Changes</h4>
           <li>Renamed Wanderer locations extension to Extended.</li>
