fixes and adjustments for presets
Remove ESR from Mobility, Unlocked from Lucky Sevens, fix Grand Tour Scenic to lower case, move Chaos Lite defeat bosses function to be smaller empty portion of RAM

--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
           <li>Removed prologue for Lucky Sevens preset.</li>
           <li>Removed remaining Bat relics from Leg Day preset.</li>
           <li>Removed Karm Coin from the $400 candle in Rat Race and replaced with Heart.</li>
+          <li>Removed Unlocked Mode from Lucky Sevens preset.</li>
           <li>Renamed Speedrun preset to Sequence Breaker.</li>
           <li>Renamed Forge preset to Any Percent.</li>
           <li>Corrected errors which prevented Rat-Race and Sequence Breaker presets from appearing on the website.</li>
@@ -644,6 +645,7 @@
           <li>Removed squeak from big-toss in Dog Life.</li>
           <li>removed multiple soft-locks in logic for Dog Life.</li>
           <li>Tile / terrain updates for Dog Life for ease of movement.</li>
+          <li>Removed Enemy Stat Randomizer from Mobility Preset.</li>
           <li>Reticulated Glitch logic splines.</li>
           <h4>Extension Changes</h4>
           <li>Renamed Wanderer locations extension to Extended.</li>
