Updated Glitch and Glitchmaster, re-added presets to Package, corrected Index.html

--- a/index.html
+++ b/index.html
@@ -629,23 +629,26 @@
           <h4>Preset Changes</h4>
           <li>Updated preset descriptions.</li>
           <li>Removed boss room limitations for Cursed Night preset.</li>
-          <li>Added ability to use Heart Refresh for Cursed Night preset.</li>
-          <li>Added new starting equipment for Cursed Night preset.</li>
+          <li>Added ability to use Heart Refresh for Cursed Night.</li>
+          <li>Added new starting equipment for Cursed Night.</li>
+          <li>Removed Coral Circlet from the Shop in Cursed Night.</li>
           <li>Added Starting Room Randomization to Chaos-Lite preset.</li>
           <li>Added Starting Room Randomization to Open preset.</li>
           <li>Added 7 random relics to starting pool for Lucky Sevens preset.</li>
-          <li>Removed prologue for Lucky Sevens preset.</li>
+          <li>Removed prologue for Lucky Sevens.</li>
           <li>Removed remaining Bat relics from Leg Day preset.</li>
-          <li>Removed Karm Coin from the $400 candle in Rat Race and replaced with Heart.</li>
-          <li>Removed Unlocked Mode from Lucky Sevens preset.</li>
+          <li>Removed Karma Coin from the $400 candle in Rat Race and replaced with Heart.</li>
+          <li>Removed Unlocked Mode from Lucky Sevens.</li>
           <li>Renamed Speedrun preset to Sequence Breaker.</li>
           <li>Renamed Forge preset to Any Percent.</li>
-          <li>Corrected errors which prevented Rat-Race and Sequence Breaker presets from appearing on the website.</li>
+          <li>Corrected errors which prevented Rat Race and Sequence Breaker presets from appearing on the website.</li>
           <li>Flight of wolf re-worked in Dog Life preset.</li>
-          <li>Removed squeak from big-toss in Dog Life.</li>
-          <li>removed multiple soft-locks in logic for Dog Life.</li>
+          <li>Removed squeak from big toss in Dog Life.</li>
+          <li>Removed multiple soft-locks in logic for Dog Life.</li>
           <li>Tile / terrain updates for Dog Life for ease of movement.</li>
-          <li>Removed Enemy Stat Randomizer from Mobility Preset.</li>
+          <li>Removed Enemy Stat Randomizer from Mobility preset.</li>
+          <li>Updated Glitchmaster preset scrawl.</li>
+          <li>Updated Glitch preset scrawl.</li>
           <li>Reticulated Glitch logic splines.</li>
           <h4>Extension Changes</h4>
           <li>Renamed Wanderer locations extension to Extended.</li>
@@ -658,8 +661,7 @@
           <li>Corrected an error when assigning randomization of attributes to Dracula.</li>
           <li>Corrected an error when improperly clearing time attack in No Prologue Mode.</li>
           <h4>Website Changes</h4>
-          <li>Set ground work for website re-design.</li>
-          <li>Started website re-design.</li>
+          <li>Set ground work for and started started website re-design.</li>
           <li>Updated many option names on the website to be more aesthetic or descriptive.</li>
           <li>Updated website to have the Meta Data information used for categorization and filtration (not implemented yet).</li>
         </ul>
