Updated API url to new DNS

--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@
             A PC-based launcher for the randomizer that helps you get started.</li>
           <li><a href="https://github.com/MottZilla/BountyHunterTool/releases/">Bounty Hunter Tool</a>,
             The key ingredient in the highly popular Bounty Hunter preset.</li>
-          <!--<li><a href="community.html">Player Leaderboards</a>,
-            Look at the current season's Leaderboards for those who race in the Long Library Discord.</li> -->
+          <li><a href="community.html">Player Leaderboards</a>,
+            Look at the current season's Leaderboards for those who race in the Long Library Discord.</li>
         </ul>
         </ul>
         <hr>
