Added Item Name Rando option

--- a/index.html
+++ b/index.html
@@ -489,6 +489,19 @@
                   </label>
                 </div>
                 <div class="pure-u-1-2">
+                  <input id="itemnamerando-mode" type="checkbox">
+                  <label for="itemnamerando-mode">Item stats names randomized
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Randomize item names when using Item Stat Rando.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
+                <div class="pure-u-1-2">
                   <input id="turkey-mode" type="checkbox">
                   <label for="turkey-mode">Turkey Mode
                     <span class="tooltip-wrapper">
